--- a/index.html
+++ b/index.html
@@ -44,23 +44,36 @@
           <h1>&dollar;29</h1>
           <p> per month</p>
         </div>
-        
 
-        <p>Full access for less than &dollar;1 a day</p>
 
-        <button type="button">Sign Up</button>
+        <p class="access">Full access for less than &dollar;1 a day</p>
+
+        <button type="button">
+          Sign Up
+        </button>
 
 
       </div>
       <div class="whyus">
-        Why Us
-        Tutorials by industry experts
-        Peer &amp; expert code review
-        Coding exercises
-        Access to our GitHub repos
-        Community forum
-        Flashcard decks
-        New videos every week
+        <h3>
+          Why Us
+        </h3>
+        <p>
+          Tutorials by industry experts
+          <br>
+          Peer &amp; expert code review
+          <br>
+          Coding exercises
+          <br>
+          Access to our GitHub repos
+          <br>
+          Community forum
+          <br>
+          Flashcard decks
+          <br>
+          New videos every week
+        </p>
+
       </div>
     </div>
   </div>
